# thing-description-schema

./: .cruft.json  .env.public  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
@type/: index.html
ActionAffordance/: index.html
AdditionalExpectedResponse/: index.html
AnyUri/: index.html
Boolean/: index.html
Curie/: index.html
DataSchema/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
EventAffordance/: index.html
ExpectedResponse/: index.html
Float/: index.html
Form/: index.html
Integer/: index.html
InteractionAffordance/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
Link/: index.html
MultiLanguage/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
OperationTypes/: index.html
PropertyAffordance/: index.html
SecurityScheme/: index.html
SecuritySchemeType/: index.html
Sparqlpath/: index.html
String/: index.html
Thing/: index.html
Time/: index.html
Uri/: index.html
Uriorcurie/: index.html
VersionInfo/: index.html
about/: index.html
actions/: index.html
additionalOutputSchema/: index.html
additionalReturns/: index.html
anchor/: index.html
base/: index.html
cancellation/: index.html
contentCoding/: index.html
contentType/: index.html
created/: index.html
description/: index.html
descriptionInLanguage/: index.html
descriptions/: index.html
events/: index.html
id/: index.html
(+68 files in other folders)
